# plex-auto-subs

./: LICENSE  NOTICE  README.md  README.txt  install-windows.ps1  install.sh  pyproject.toml  run_daemon.py
Contents/Code/: subtitle_sync.py
